Changement de styles

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     
     <div class="panel info">
       <dl class="skillz">
-        <dt>CSS</dt>
+        <dt>java</dt>
         <dd>98</dd>
-        <dt>Javascript</dt>
+        <dt>j2ee</dt>
         <dd>86</dd>
-        <dt>PHP</dt>
+        <dt>Javascript</dt>
         <dd>28</dd>
-        <dt>Ruby</dt>
+        <dt>web</dt>
         <dd>32</dd>
       </dl>
       
