--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <figcaption>
   
         <h1 class="name">Mohamed</h1>
-        <h3 class="title">Developpeur senior</h3>
+        <h3 class="title">Developpeur senior</h3>q
       </figcaption>
     </figure>
     
@@ -50,7 +50,7 @@
   </section>
   <!-- partial -->
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script  src="./script.js"></script>
+    <script  src="./script.js" type="text/Javascript"></script>
 
 
 </body>
