--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <figcaption>
   
         <h1 class="name">Mohamed</h1>
-        <h3 class="title">Developpeur senior</h3>q
+        <h3 class="title">Developpeur senior</h3>
       </figcaption>
     </figure>
     
